--- a/app/src/main/res/layout/fragment_movie_schedule.xml
+++ b/app/src/main/res/layout/fragment_movie_schedule.xml
@@ -154,10 +154,13 @@
                 android:layout_marginEnd="@dimen/_17sdp"
                 android:drawableRight="@drawable/arrow_right"
                 android:text="Select Seat(s)"
+                android:textAllCaps="false"
                 android:gravity="center"
                 android:textAlignment="textStart"
                 android:fontFamily="@font/work_sans_vf"
                 android:textColor="#FFC20C"
+                android:textSize="@dimen/_13sdp"
+                android:textFontWeight="600"
                 android:background="@drawable/button_roundable"
                 app:layout_constraintTop_toBottomOf="@id/rv_seat"
                 app:layout_constraintEnd_toEndOf="parent"
