--- a/app/src/main/res/layout/activity_movie_search.xml
+++ b/app/src/main/res/layout/activity_movie_search.xml
@@ -103,13 +103,16 @@
             android:paddingTop="@dimen/_16sdp"
             android:paddingStart="@dimen/_22sdp"
             android:paddingEnd="0dp"
+            android:elevation="@dimen/_8sdp"
             app:flow_horizontalAlign="center"
+            tools:listitem="@layout/movie_card_layout"
+            app:spanCount="2"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_search_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:listitem="@layout/movie_card_layout"
-            android:elevation="@dimen/_8sdp"/>
+           />
 
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
