--- a/app/src/main/res/layout/date.xml
+++ b/app/src/main/res/layout/date.xml
@@ -17,7 +17,7 @@
         android:text="23"
         android:fontFamily="@font/work_sans_vf"
         android:layout_marginTop="-15dp"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/text_gray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tue"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/text_gray"
 
         android:fontFamily="@font/work_sans_vf"
         app:layout_constraintTop_toBottomOf="@id/tv_date_1"
