--- a/app/src/main/res/layout/fragment_movie_ticket_seats.xml
+++ b/app/src/main/res/layout/fragment_movie_ticket_seats.xml
@@ -103,7 +103,7 @@
                 android:fontFamily="@font/work_sans_vf"
                 android:gravity="center"
                 android:text="@string/unavailable"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/text_gray"
                 android:textSize="@dimen/_10ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv2_cl2"
@@ -118,7 +118,7 @@
                 android:fontFamily="@font/work_sans_vf"
                 android:gravity="center"
                 android:text="@string/available"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/text_gray"
                 android:textSize="@dimen/_10ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv3_cl2"
@@ -133,7 +133,7 @@
                 android:fontFamily="@font/work_sans_vf"
                 android:gravity="center"
                 android:text="@string/your_seats"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/text_gray"
                 android:textSize="@dimen/_10ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
