--- a/app/src/main/res/drawable/rectangle_layout_3.xml
+++ b/app/src/main/res/drawable/rectangle_layout_3.xml
@@ -5,6 +5,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/dark_grey" />
+        android:color="@color/text_gray" />
 </shape>
 
