--- a/app/src/main/res/layout/movie_seat_bottomsheet.xml
+++ b/app/src/main/res/layout/movie_seat_bottomsheet.xml
@@ -9,6 +9,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bottomsheet_rounded"
     android:elevation="10dp"
+
     app:behavior_hideable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     >
@@ -31,7 +32,7 @@
             android:text="Total"
             android:textFontWeight="600"
             android:textSize="@dimen/_17sdp"
-            android:textColor="@color/darker_grey"
+            android:textColor="@color/dark_grey"
             android:fontFamily="@font/work_sans_vf"
             android:layout_marginStart="@dimen/_17sdp"
             android:layout_marginTop="@dimen/_35sdp"
@@ -56,7 +57,7 @@
             android:text="Rs. 1,500"
             android:textFontWeight="600"
             android:textSize="@dimen/_17sdp"
-            android:textColor="@color/darker_grey"
+            android:textColor="@color/dark_grey"
             android:fontFamily="@font/work_sans_vf"
             android:layout_marginEnd="@dimen/_17sdp"
             android:layout_marginTop="@dimen/_35sdp"
@@ -64,7 +65,7 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/select_seat_btn"
+            android:id="@+id/book_now_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingEnd="@dimen/_24sdp"
