--- a/app/src/main/res/layout/select_seat.xml
+++ b/app/src/main/res/layout/select_seat.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="-15dp"
             android:text="02:00PM"
             android:textSize="@dimen/_11ssp"
-            android:textColor="@color/dark_grey"
+            android:textColor="@color/text_gray"
             android:fontFamily="@font/work_sans_vf"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:text="Regular"
             android:textSize="@dimen/_8ssp"
-            android:textColor="@color/dark_grey"
+            android:textColor="@color/text_gray"
             android:fontFamily="@font/work_sans_vf"
             app:layout_constraintStart_toStartOf="@id/tv_seat_1"
             app:layout_constraintEnd_toEndOf="@id/tv_seat_1"
