--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -5,4 +5,17 @@
         name="abcd" parent="Widget.AppCompat.TextView">
 
     </style>
+    <declare-styleable name="DotsIndicator">
+        <attr name="dots_count" format="integer" />
+        <attr name="selected_dot_scale_factor" format="float" />
+        <attr name="selected_dot_resource" format="reference" />
+        <attr name="unselected_dot_resource" format="reference" />
+        <attr name="dot_height" format="dimension" />
+        <attr name="dot_width" format="dimension" />
+        <attr name="dot_selected_width" format="dimension" />
+        <attr name="first_dot_height" format="dimension" />
+        <attr name="first_dot_width" format="dimension" />
+        <attr name="margins_between_dots" format="dimension" />
+
+    </declare-styleable>
 </resources>
