--- a/app/src/main/res/layout/activity_movie_search.xml
+++ b/app/src/main/res/layout/activity_movie_search.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar_movie_search"
 
         app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="39dp">
+        tools:layout_editor_absoluteX="-39dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_search_1"
@@ -98,29 +98,28 @@
             android:id="@+id/recyleView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            android:paddingTop="@dimen/_16sdp"
-            android:paddingStart="@dimen/_22sdp"
-            android:paddingEnd="0dp"
             android:elevation="@dimen/_8sdp"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_22sdp"
+            android:paddingTop="@dimen/_16sdp"
+            android:paddingEnd="0dp"
             app:flow_horizontalAlign="center"
-            tools:listitem="@layout/movie_card_layout"
-            app:spanCount="2"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_search_2"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-           />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_search_2"
+            app:spanCount="2"
+            tools:listitem="@layout/movie_card_layout" />
 
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/iv_filter"
             android:layout_width="@dimen/_27sdp"
             android:layout_height="@dimen/_27sdp"
-            android:src="@drawable/iv_filter"
             android:layout_marginStart="@dimen/_7sdp"
             android:layout_marginEnd="@dimen/_10sdp"
+            android:src="@drawable/iv_filter"
             app:layout_constraintBottom_toBottomOf="@id/et_searchview"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/et_searchview"
@@ -138,11 +137,11 @@
             android:drawablePadding="@dimen/_12sdp"
             android:fontFamily="@font/work_sans_vf"
             android:hint="@string/search_movie_by_name"
-            android:textColorHint="#A8A8A8"
-            android:textColor="@color/black"
             android:padding="@dimen/_12sdp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/black"
+            android:textColorHint="#A8A8A8"
             app:layout_constraintEnd_toStartOf="@id/iv_filter"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl3" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
