--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,4 +27,15 @@
         parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bottomsheet_rounded</item>
     </style>
+
+
+    <style name="AppBottomSheetDialogTheme2"
+        parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle2</item>
+    </style>
+
+    <style name="AppModalStyle2"
+        parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bottomsheet_roundable_2</item>
+    </style>
 </resources>
