--- a/app/src/main/res/layout/fragment_view_movie1.xml
+++ b/app/src/main/res/layout/fragment_view_movie1.xml
@@ -24,17 +24,22 @@
             app:cardCornerRadius="32dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/cl_tab"
+            app:cardPreventCornerOverlap="false"
             >
 
-            <VideoView
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                 android:id="@+id/movie_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:foreground="@drawable/civilwar"
-
+                app:autoPlay="false"
                 />
-
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/transparent"/>
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_video_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/shadow"
@@ -91,6 +96,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_17sdp"
+                    android:layout_marginBottom="@dimen/_16sdp"
                     android:text="2020"
                     android:textSize="@dimen/_10ssp"
                     android:textColor="@color/white"
@@ -99,7 +105,8 @@
                     android:textStyle="bold"
                     android:drawablePadding="@dimen/_3sdp"
                     app:layout_constraintTop_toBottomOf="@id/tv_movie_view_2"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_movie_view_4"
@@ -131,15 +138,17 @@
                     app:layout_constraintTop_toTopOf="@id/tv_movie_view_4"
                     />
 
-                <androidx.appcompat.widget.AppCompatImageView
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/play_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/group_3141"
+                    android:backgroundTint="@color/transparent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.359" />
+                    app:layout_constraintVertical_bias="0.360" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
