--- a/app/src/main/res/layout/fragment_view_movie1.xml
+++ b/app/src/main/res/layout/fragment_view_movie1.xml
@@ -165,6 +165,24 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/movie_scr_cardlayout_viewpager"
         >
+        <LinearLayout
+            android:id="@+id/ll1_schedule"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:background="@color/light_grey"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="horizontal" />
+        <LinearLayout
+            android:id="@+id/ll2_schedule"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:background="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="horizontal" />
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/movie_scr_tab_layout"
             android:layout_width="match_parent"
@@ -173,13 +191,15 @@
             android:background="@drawable/movie_scr_cardlayout_viewpager"
             android:backgroundTint="@color/transparent"
             app:tabGravity="fill"
-            app:tabIndicator="@color/light_grey"
+            app:tabIndicator="@color/transparent"
+            app:tabRippleColor="@color/transparent"
             app:tabSelectedTextColor="@color/black"
             app:tabTextColor="#6F6F6F"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             >
+
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
