--- a/app/src/main/res/layout/select_hall.xml
+++ b/app/src/main/res/layout/select_hall.xml
@@ -2,14 +2,18 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/_81sdp"
     android:layout_height="@dimen/_30sdp"
-    app:cardElevation="@dimen/_1sdp"
+    app:cardElevation="0dp"
     android:layout_marginEnd="@dimen/_10sdp"
+    app:cardBackgroundColor="@color/transparent"
+    android:background="@color/transparent"
+    android:elevation="0dp"
+    app:cardMaxElevation="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/recyclerview_selector_drawable"
         >
 
         <androidx.appcompat.widget.AppCompatTextView
